--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-    
   },
   "repository": {
     "type": "git",
@@ -22,5 +21,6 @@
   },
   "homepage": "https://github.com/shraddhabhuju/packageTest#readme",
   "dependencies": {
+    "firebase-tools":"^11.10.0"
   }
 }
