--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,3 +22,18 @@ jobs:
           automatic_release_tag: "1.1.0"
           prerelease: false
           title: "Development Build"
+          
+    publish-npm:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+          registry-url: https://registry.npmjs.org/
+      - run: npm ci
+      # - run: npm build
+      - run: npm publish --access=public
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
