--- a/.github/workflows/releaseandpublish.yml
+++ b/.github/workflows/releaseandpublish.yml
@@ -1,10 +1,27 @@
-name: Publish Package
+name: "pre-release"
 
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - "main"
 
 jobs:
+  release:
+    name: "Release"
+    runs-on: "ubuntu-latest"
+
+    steps:
+      # ...
+      - name: "Build & test"
+        run: |
+          echo "done!"
+
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "1.1.0"
+          prerelease: false
+          title: "Development Build"
   build:
     runs-on: ubuntu-latest
     steps:
